--- a/package.json
+++ b/package.json
@@ -11,17 +11,25 @@
     "cdk": "cdk"
   },
   "devDependencies": {
+    "source-map-support": "^0.5.16",
+    "@aws-cdk/core": "1.75.0",
     "@aws-cdk/assert": "1.75.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
+    "aws-cdk": "1.75.0",
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.75.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/core": "1.75.0",
-    "source-map-support": "^0.5.16"
   }
 }
