--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "clean": "rm -rf nextjs-app/node_modules/ nextjs-app/.next/ nextjs-app/out/",
     "deploy": "yarn clean && cdk deploy"
   },
-  "devDependencies": {
-    "@aws-cdk/assert": "1.75.0",
-    "@aws-cdk/aws-lambda": "^1.75.0",
-    "@aws-cdk/aws-s3": "^1.75.0",
+  "dependencies": {
+    "@aws-cdk/aws-ec2": "^1.75.0",
+    "@aws-cdk/aws-ecr": "1.75.0",
+    "@aws-cdk/aws-ecs": "^1.75.0",
+    "@aws-cdk/aws-ecs-patterns": "^1.75.0",
+    "@aws-cdk/aws-iam": "1.75.0",
     "@aws-cdk/core": "^1.75.0",
     "@types/aws-sdk": "^2.7.0",
     "@types/jest": "^26.0.10",
@@ -27,8 +29,5 @@
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
-  },
-  "dependencies": {
-    "aws-sdk": "^2.799.0"
   }
 }
