--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-cdk/aws-ecs": "^1.75.0",
     "@aws-cdk/aws-ecs-patterns": "^1.75.0",
     "@aws-cdk/aws-iam": "1.75.0",
+    "@aws-cdk/aws-s3": "1.75.0",
     "@aws-cdk/core": "^1.75.0",
     "@types/aws-sdk": "^2.7.0",
     "@types/jest": "^26.0.10",
