--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "yarn clean && cdk deploy"
   },
   "dependencies": {
+    "@aws-cdk/aws-cloudfront": "1.75.0",
     "@aws-cdk/aws-ec2": "^1.75.0",
     "@aws-cdk/aws-ecr": "1.75.0",
     "@aws-cdk/aws-ecs": "^1.75.0",
