--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/aws-sdk": "^2.7.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.8.2",
     "@typescript-eslint/parser": "^4.8.2",
     "aws-cdk": "1.75.0",
@@ -30,6 +31,7 @@
     "source-map-support": "^0.5.16",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "typescript": "~3.9.7",
+    "uuid": "^8.3.2"
   }
 }
