--- a/package.json
+++ b/package.json
@@ -13,25 +13,27 @@
   },
   "dependencies": {
     "@aws-cdk/aws-cloudfront": "1.75.0",
-    "@aws-cdk/aws-ec2": "^1.75.0",
+    "@aws-cdk/aws-codepipeline-actions": "1.75.0",
+    "@aws-cdk/aws-ec2": "1.75.0",
     "@aws-cdk/aws-ecr": "1.75.0",
-    "@aws-cdk/aws-ecs": "^1.75.0",
-    "@aws-cdk/aws-ecs-patterns": "^1.75.0",
+    "@aws-cdk/aws-ecs": "1.75.0",
+    "@aws-cdk/aws-ecs-patterns": "1.75.0",
     "@aws-cdk/aws-iam": "1.75.0",
     "@aws-cdk/aws-s3": "1.75.0",
-    "@aws-cdk/core": "^1.75.0",
-    "@types/aws-sdk": "^2.7.0",
-    "@types/jest": "^26.0.10",
+    "@aws-cdk/core": "1.75.0",
+    "@aws-cdk/pipelines": "1.75.0",
+    "@types/aws-sdk": "2.7.0",
+    "@types/jest": "26.0.10",
     "@types/node": "10.17.27",
-    "@types/uuid": "^8.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
+    "@types/uuid": "8.3.0",
+    "@typescript-eslint/eslint-plugin": "4.8.2",
+    "@typescript-eslint/parser": "4.8.2",
     "aws-cdk": "1.75.0",
-    "jest": "^26.4.2",
-    "source-map-support": "^0.5.16",
-    "ts-jest": "^26.2.0",
-    "ts-node": "^9.0.0",
+    "jest": "26.4.2",
+    "source-map-support": "0.5.16",
+    "ts-jest": "26.2.0",
+    "ts-node": "9.0.0",
     "typescript": "~3.9.7",
-    "uuid": "^8.3.2"
+    "uuid": "8.3.2"
   }
 }
